[package]
name = "scavenger_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cardano
cardano-serialization-lib = "12.0"
bech32 = "0.9"

# Crypto
hex = "0.4"
sha2 = "0.10"
blake2 = "0.10"

# Utils
anyhow = "1.0"
thiserror = "1.0"