[package]
name = "scavenger_miner"
version = "0.2.0"
edition = "2021"

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto & Utils
hex = "0.4"
anyhow = "1.0"
chrono = "0.4"

# AshMaize - Direct from GitHub
ashmaize = { git = "https://github.com/input-output-hk/ce-ashmaize", branch = "master" }
num_cpus = "1.17.0"

# Optimization for release builds
[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
panic = "abort"         # Smaller binary
strip = true            # Remove debug symbols

# Faster compilation in development
[profile.dev]
opt-level = 1
